# muxde

./: Cargo.toml
config/: default.toml
src/: api.rs  api.rs~  application.rs  buffer.rs  colortheme.rs  command.rs  innerpipe.rs  innerpipe.rs~  lib.rs  main.rs  window.rs
src/window/: editor.rs  mod.rs
src/windows/: editor.rs  editor.rs~
